fix overflow scroll

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,11 @@ button {
   background-color: #b3b6c3;
   color:rgb(0, 0, 0);
   cursor: pointer;
+
+  @media (max-width: 800px) {
+    margin: 10px 0px;
+    width: 100%;
+  }
 }
 
 h1 {
